<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llfilldetails"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal"
        android:visibility="gone"
        android:weightSum="1">

        <TextView
            android:id="@+id/tvtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_weight="0.80"
            android:gravity="center"
            android:text="Plese Fill in below Details"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ivedit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right"
            android:layout_weight="0.20"
            android:src="@drawable/edit"
            android:visibility="gone"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="9dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <EditText
                    android:id="@+id/edtfromDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.80"
                    android:ems="20"
                    android:enabled="false"
                    android:hint="@string/fromdate"
                    android:textColor="@color/black" />

                <ImageView
                    android:id="@+id/ivpickdate"
                    android:layout_width="wrap_content"
                    android:layout_height="34dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/date" />
                </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <EditText
                    android:id="@+id/edttoDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.80"
                    android:ems="20"
                    android:enabled="false"
                    android:hint="@string/todate"
                    android:textColor="@color/black" />

                <ImageView
                    android:id="@+id/ivpicktodate"
                    android:layout_width="wrap_content"
                    android:layout_height="34dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/date" />
                </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/edtSource"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:layout_weight="1"
                    android:hint="@string/source"
                    android:padding="1dp"
                    android:lineSpacingExtra="3dp"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="3dp"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/edtDestination"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:lineSpacingExtra="3dp"
                    android:hint="@string/destination"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="3dp"
                    android:background="@android:color/darker_gray" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <Spinner
                    android:id="@+id/sptl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/edtweight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="20"
                    android:hint="@string/weight"
                    android:inputType="numberDecimal" />

            </LinearLayout>

            <EditText
                android:id="@+id/edtdesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="20"
                android:hint="@string/description" />

            <EditText
                android:id="@+id/edtremarks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="20"
                android:hint="@string/remarks" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgparcel"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/ic_launcher" />

                <Button
                    android:id="@+id/btnimage"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/registerbtn"
                    android:gravity="center"
                    android:text="@string/chooseimage"
                    android:textColor="@color/white"
                    android:textStyle="bold"

                    />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:visibility="gone"
                android:weightSum="2">

                <Button
                    android:id="@+id/buttonSetFrom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/registerbtn"
                    android:textColor="@android:color/white"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/buttonSetTo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/registerbtn"
                    android:text="@string/set_to"
                    android:textColor="@android:color/white" />


                <Button
                    android:id="@+id/buttonCalcDistance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/registerbtn"
                    android:text="@string/calc_dist"
                    android:textColor="@android:color/white" />

            </LinearLayout>

            <Button
                android:id="@+id/btnpost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/registerbtn"
                android:text="@string/post"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:visibility="gone">

                <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:map="http://schemas.android.com/apk/res-auto"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:id="@+id/map"
                    class="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginBottom="5dp" />


            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>