<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="9dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <EditText
                    android:id="@+id/edtFromDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.80"
                    android:ems="20"
                    android:enabled="false"
                    android:hint="@string/fromdate"
                    android:textColor="@color/black" />

                <ImageView
                    android:id="@+id/ivPickFromDate"
                    android:layout_width="wrap_content"
                    android:layout_height="34dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/date" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <EditText
                    android:id="@+id/edtToDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.80"
                    android:ems="20"
                    android:enabled="false"
                    android:hint="@string/todate"
                    android:textColor="@color/black" />

                <ImageView
                    android:id="@+id/ivPickToDate"
                    android:layout_width="wrap_content"
                    android:layout_height="34dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/date" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvSource"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:layout_weight="1"
                    android:hint="@string/source"
                    android:lineSpacingExtra="3dp"
                    android:padding="1dp"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="3dp"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/tvDestination"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:hint="@string/destination"
                    android:lineSpacingExtra="3dp"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="3dp"
                    android:background="@android:color/darker_gray" />

            </LinearLayout>

            <LinearLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/lblroutefreq"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Status"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/sproute"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:entries="@array/routes"
                    android:textColor="@color/black" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgvehicle"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/ic_launcher" />

                <Button
                    android:id="@+id/btnvehicleimage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/registerbtn"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/choosevehicleimage"
                    android:textColor="@color/white"
                    android:textStyle="bold" />


            </LinearLayout>

            <Button
                android:id="@+id/btnpostroute"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="20dp"
                android:background="@drawable/registerbtn"
                android:text="@string/postroute"
                android:textColor="@android:color/white"
                android:textStyle="bold" />


        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/llfilldetails"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/tvtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_weight="0.80"
            android:gravity="center"
            android:text="Plese Fill in below Details"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ivedit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right"
            android:layout_weight="0.20"
            android:src="@drawable/edit"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>